# salvia-demo

./: .htaccess  README  make.sh  salvia-demo.cabal  salvia-extras.cabal  salvia.cgi
src/: CgiDemo.hs  Demo.hs  DirectoryHandling.hs  HelloWorld.hs  QueryParams.hs  Serve.hs  ServeDemo.hs  Terminal.hs
src/Network/Salvia/Handler/: CleverCSS.hs  ColorLog.hs  ExtendedFileSystem.hs  FileStore.hs  HsColour.hs  SendFile.hs  StringTemplate.hs  WebSocket.hs
src/Network/Salvia/Impl/: C10k.hs  Cgi.hs
src/Util/: Terminal.hs
www/: demo.cgi  index.ccss  index.html  login.html  signup.html
www/data/: users.db
