Name:             salvia-demo
Version:          0.3.0
Description:      Demo Salvia server.
Synopsis:         Demo Salvia server.
Category:         Network, Web
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Cabal-version:    >= 1.6
Build-Type:       Simple

Data-Files:       www/data/users.db
                  www/demo.cgi
                  www/index.ccss
                  www/index.html
                  www/login.html
                  www/signup.html

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*,
                    clevercss ==0.1.*,
                    bytestring ==0.9.*,
                    salvia ==0.3.*,
                    salvia-protocol ==0.1.*,
                    transformers ==0.1.*,
                    salvia-extras ==0.3.*,
                    salvia-sessions ==1.0.*,
                    fclabels ==0.4.*,
                    hscolour ==1.15.*,
                    text >= 0.5 && < 0.8,
                    old-locale ==1.0.*,
                    time ==1.1.*,
                    filestore ==0.3.*,
                    network >= 2.2.1.7 && < 2.3,
                    monads-fd ==0.0.*,
                    stm ==2.1.*,
                    HStringTemplate ==0.6.*,
                    sendfile ==0.6.*,
                    utf8-string ==0.3.*,
                    c10k ==0.2.0,
                    pureMD5 ==1.0.*,
                    split ==0.1.*,
                    threadmanager ==0.1.*

Executable          salvia-extras-demo
  Executable:       salvia-extras-demo
  Main-is:          Demo.hs
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src 

Executable          salvia-serve
  Executable:       salvia-serve
  Main-is:          ServeDemo.hs
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src 

Executable          salvia.cgi
  Executable:       salvia.cgi
  Main-is:          CgiDemo.hs
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src 

