Name:             salvia-demo
Version:          1.0.0
Description:      Demo Salvia servers, one default implementation, one running as CGI and one running on the C10k server.
Synopsis:         Demo Salvia servers, one default implementation, one running as CGI and one running on the C10k server.
Category:         Network, Web
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Cabal-version:    >= 1.6
Build-Type:       Simple

Data-Files:       www/data/users.db
                  www/demo.cgi
                  www/index.ccss
                  www/index.html
                  www/login.html
                  www/signup.html

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*,
                    transformers ==0.1.*,
                    monads-fd ==0.0.*,
                    threadmanager ==0.1.*,
                    stm ==2.1.*,
                    c10k ==0.2.0,
                    filestore ==0.3.*,
                    fclabels ==0.4.*,
                    network >= 2.2.1.7 && < 2.3,
                    salvia ==1.0.*,
                    salvia-protocol ==1.0.*,
                    salvia-extras ==1.0.*,
                    salvia-sessions ==1.0.*,
                    salvia-websocket ==1.0.*

Executable          salvia-extras-demo
  Executable:       salvia-extras-demo
  Main-is:          Demo.hs
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src 

Executable          salvia-serve
  Executable:       salvia-serve
  Main-is:          ServeDemo.hs
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src 

Executable          salvia.cgi
  Executable:       salvia.cgi
  Main-is:          CgiDemo.hs
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src 

