Name:             salvia-extras
Version:          0.3.0
Description:      Collection of non-fundamental request handler for the Salvia web server.
Synopsis:         Collection of non-fundamental request handler for the Salvia web server.
Category:         Network, Web
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Cabal-version:    >= 1.6
Build-Type:       Simple

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src
  Build-Depends:    base,
                    clevercss,
                    salvia,
                    salvia-protocol,
                    transformers,
                    fclabels,
                    hscolour,
                    text,
                    filestore,
                    network,
                    monads-fd,
                    stm,
                    HStringTemplate,
                    parsec ==3.0.*,
                    sendfile,
                    utf8-string,
                    pureMD5
  Other-Modules:    Terminal
  Exposed-modules:  Network.Salvia.Handler.ColorLog
                    Network.Salvia.Handler.CleverCSS,
                    Network.Salvia.Handler.ExtendedFileSystem,
                    Network.Salvia.Handler.SendFile,
                    Network.Salvia.Handler.HsColour

Executable          salvia-extras-demo
  Executable:       salvia-extras-demo
  Main-is:          Demo.hs
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src 

