Name:             salvia-extras
Version:          0.3.0
Description:      Collection of non-fundamental request handler for the Salvia web server.
Synopsis:         Collection of non-fundamental request handler for the Salvia web server.
Category:         Network, Web
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Cabal-version:    >= 1.6
Build-Type:       Simple

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.2.*,
                    clevercss ==0.1.*,
                    bytestring ==0.9.*,
                    salvia ==0.3.*,
                    salvia-protocol ==0.1.*,
                    transformers ==0.1.*,
                    fclabels ==0.4.*,
                    hscolour ==1.15.*,
                    text ==0.7.*,
                    filestore ==0.3.*,
                    network >= 2.2.1.7 && < 2.3,
                    monads-fd ==0.0.*,
                    stm ==2.1.*,
                    HStringTemplate ==0.6.*,
                    sendfile ==0.6.*,
                    utf8-string ==0.3.*,
                    c10k ==0.2.0,
                    pureMD5 ==1.0.*,
                    split ==0.1.*,
                    threadmanager ==0.1.*

  Other-Modules:    Terminal
  Exposed-modules:  Network.Salvia.Handler.CleverCSS,
                    Network.Salvia.Handler.ColorLog
                    Network.Salvia.Handler.ExtendedFileSystem,
                    Network.Salvia.Handler.FileStore
                    Network.Salvia.Handler.HsColour
                    Network.Salvia.Handler.SendFile
                    Network.Salvia.Handler.StringTemplate
                    Network.Salvia.Impl.C10k

Executable          salvia-extras-demo
  Executable:       salvia-extras-demo
  Main-is:          Demo.hs
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src 

Executable          salvia-serve
  Executable:       salvia-serve
  Main-is:          Serve.hs
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src 

